test/sema/if.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn foo() -> void {
}

fn bar() -> i32 {
    return 1;
}

fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:12: error: unexpected type in condition 'void'
    if (foo()) {
    }

    if (bar()) {
    } else {
        // CHECK: [[# @LINE + 1 ]]:16: error: unexpected type in condition 'void'
        if (foo()) {
        }
    }
}

// CHECK-NOT: {{.*}}